[bumpversion]
current_version = 0.0.1
commit = true
tag = true
tag_name = {new_version}

[tool:pytest]
minversion = 3.0
strict = true
testpaths = tests

[wheel]
universal = 1

[flake8]
max-line-length = 99

[bumpversion:file:setup.py]

[bumpversion:file:src/__init__.py]

[coverage:run]
branch = True
source =
	send_nsca

[coverage:paths]
source =
	src/send_nsca
	.tox/*/lib/python*/site-packages/send_nsca
	.tox/pypy*/site-packages/send_nsca

[coverage:report]
show_missing = True

[metadata]
description-file = README.rst

[bdist_wheel]
universal=1

